force-app/main/default/objects/Compensation__c/Compensation__c.object-meta.xml
<CustomObject>
    <label>Compensation</label>
    <nameField>
        <displayFormat>C{00000000}</displayFormat>
        <label>Compensation Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compensation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>