force-app/main/default/objects/Compensation__c/fields/Bank_Detail_Provided_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bank_Detail_Provided_By_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if bank detail is provided by customer via compensation form</description>
    <inlineHelpText>Check if bank detail is provided by customer via compensation form</inlineHelpText>
    <label>Bank Detail Provided By Customer</label>
    <type>Checkbox</type>
</CustomField>