force-app/main/default/objects/Compensation__c/fields/Bank_Details_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Details Confirmed</label>
    <type>Checkbox</type>
</CustomField>