force-app/main/default/objects/Compensation__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <label>Batch Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>