force-app/main/default/objects/Compensation__c/fields/BSB__c.field-meta.xml
<CustomField>
    <fullName>BSB__c</fullName>
    <label>BSB</label>
    <length>6</length>
    <type>Text</type>
</CustomField>