force-app/main/default/objects/Compensation__c/fields/Business_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Number__c</fullName>
    <label>Business Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>