force-app/main/default/objects/Compensation__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <formula>Case__r.CaseNumber</formula>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>