force-app/main/default/objects/Compensation__c/fields/Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Amount__c</fullName>
    <inlineHelpText>Value must be greater than 0</inlineHelpText>
    <label>Value of Contents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>