force-app/main/default/objects/Compensation__c/fields/Compensation_Email__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Email__c</fullName>
    <description>The email that receive compensation emails. Get from related case&apos; contact and is used in email alert.</description>
    <label>Compensation Email</label>
    <type>Email</type>
</CustomField>