force-app/main/default/objects/Compensation__c/fields/Compensation_Form_Attemps__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Form_Attemps__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Attemps counter for compensation form</description>
    <label>Compensation Form Attemps</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>