force-app/main/default/objects/Compensation__c/fields/Compensation_Form_Token__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Form_Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Compensation Form Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>