force-app/main/default/objects/Compensation__c/fields/CostCentreCode__c.field-meta.xml
<CustomField>
    <fullName>CostCentreCode__c</fullName>
    <label>Cost Centre Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>