force-app/main/default/objects/Compensation__c/fields/Cover_Type__c.field-meta.xml
<CustomField>
    <fullName>Cover_Type__c</fullName>
    <label>Cover Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>T&amp;C Cover</fullName>
            </value>
            <value>
                <fullName>Transit Cover</fullName>
            </value>
            <value>
                <fullName>Extra Cover</fullName>
            </value>
            <value>
                <fullName>ACL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>