force-app/main/default/objects/Compensation__c/fields/CurrentArticleId__c.field-meta.xml
<CustomField>
    <fullName>CurrentArticleId__c</fullName>
    <description>Stores the article id from Case as static value to track the article that the compensation record was intended for</description>
    <label>Current Article Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>