force-app/main/default/objects/Compensation__c/fields/Discretionary_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goodwill Compensation</label>
    <type>Checkbox</type>
</CustomField>