force-app/main/default/objects/Compensation__c/fields/GLCOSTCENTRE__c.field-meta.xml
<CustomField>
    <fullName>GLCOSTCENTRE__c</fullName>
    <formula>IF(CostCentreCode__c &lt;&gt; null, CostCentreCode__c, CreatedBy.Work_Center_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GLCOSTCENTRE</label>
    <type>Text</type>
</CustomField>