force-app/main/default/objects/Compensation__c/fields/HasExtraCover__c.field-meta.xml
<CustomField>
    <fullName>HasExtraCover__c</fullName>
    <description>Indicates if the related case article has extra cover</description>
    <formula>Case__r.ArticleTest__r.InsuranceAmount__c &gt; 0 &amp;&amp; ISBLANK(Case__r.ArticleTest__r.MLID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the related case article has extra cover</inlineHelpText>
    <label>Has Extra Cover?</label>
    <type>Checkbox</type>
</CustomField>