force-app/main/default/objects/Compensation__c/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compensation</relationshipLabel>
    <relationshipName>Compensation1</relationshipName>
    <type>Lookup</type>
</CustomField>