force-app/main/default/objects/Compensation__c/fields/Letter_Authorizing__c.field-meta.xml
<CustomField>
    <fullName>Letter_Authorizing__c</fullName>
    <defaultValue>&quot;UPU PARC CONV ART 24 RC 151.1&quot;</defaultValue>
    <label>Letter Authorizing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>