force-app/main/default/objects/Compensation__c/fields/ManagerLevel1__c.field-meta.xml
<CustomField>
    <fullName>ManagerLevel1__c</fullName>
    <description>Line Manager</description>
    <formula>CreatedBy.Manager.FirstName &amp; &quot; &quot; &amp; CreatedBy.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Level 1</label>
    <type>Text</type>
</CustomField>