force-app/main/default/objects/Compensation__c/fields/ManagerLevel2__c.field-meta.xml
<CustomField>
    <fullName>ManagerLevel2__c</fullName>
    <description>Manager Level 2</description>
    <formula>CreatedBy.Manager.Manager.FirstName &amp; &quot; &quot; &amp; CreatedBy.Manager.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Level 2</label>
    <type>Text</type>
</CustomField>