force-app/main/default/objects/Compensation__c/fields/Privacy_Check__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Check</label>
    <type>Checkbox</type>
</CustomField>