force-app/main/default/objects/Compensation__c/fields/Proof_of_Value__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to indicate that the proof of value confirmation is provided</description>
    <inlineHelpText>Please attach a POV document from the CASE. The system will automatically tick this checkbox for you.Please attach a POV document from the CASE. The system will automatically tick this checkbox for you.</inlineHelpText>
    <label>Proof of Value</label>
    <type>Checkbox</type>
</CustomField>