force-app/main/default/objects/Compensation__c/fields/Service_Value__c.field-meta.xml
<CustomField>
    <fullName>Service_Value__c</fullName>
    <inlineHelpText>Value must be greater than 0</inlineHelpText>
    <label>Postage/Service Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>