force-app/main/default/objects/Compensation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Awaiting Money Order Number</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Contact Customer for Proof of Value</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>EFT Cancelled</fullName>
            </value>
            <value>
                <fullName>Alternate Compensation</fullName>
            </value>
            <value>
                <fullName>EFT Rejected</fullName>
            </value>
            <value>
                <fullName>Payment Successful</fullName>
            </value>
            <value>
                <fullName>Approved Awaiting Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>