force-app/main/default/objects/Compensation__c/fields/Total_Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Compensation_Amount__c</fullName>
    <formula>Compensation_Amount__c + IF(TEXT(Cover_Type__c) = &quot;Extra Cover&quot;, ExtraCoverPostage__c, Service_Value__c) + Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Compensation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>