force-app/main/default/objects/Compensation__c/fields/UPLOAD_TYPE__c.field-meta.xml
<CustomField>
    <fullName>UPLOAD_TYPE__c</fullName>
    <defaultValue>&quot;Credit&quot;</defaultValue>
    <description>Used for &quot;Business account credits&quot; extract to be upload into SAP by National Credit. Default value as &quot;Credit&quot;</description>
    <label>UPLOAD TYPE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>