force-app/main/default/objects/Compensation__c/recordTypes/Account_Credit.recordType-meta.xml
<RecordType>
    <fullName>Account_Credit</fullName>
    <active>true</active>
    <description>Compensation type is Account Credit</description>
    <label>Account Credit</label>
</RecordType>