force-app/main/default/objects/Compensation__c/recordTypes/EFT.recordType-meta.xml
<RecordType>
    <fullName>EFT</fullName>
    <active>true</active>
    <description>Compensation type for Electronic Fund Transfer</description>
    <label>EFT</label>
</RecordType>