force-app/main/default/objects/Compensation__c/recordTypes/International_Accounting.recordType-meta.xml
<RecordType>
    <fullName>International_Accounting</fullName>
    <active>true</active>
    <description>Compensation type is International Accounting</description>
    <label>International Accounting</label>
</RecordType>