force-app/main/default/objects/Compensation__c/recordTypes/Load_and_Go.recordType-meta.xml
<RecordType>
    <fullName>Load_and_Go</fullName>
    <active>true</active>
    <description>This record type is introduced as part of Load &amp; Go Project. It is used by Contact Centre Users.</description>
    <label>Load and Go</label>
</RecordType>