force-app/main/default/objects/Compensation__c/recordTypes/Money_Order.recordType-meta.xml
<RecordType>
    <fullName>Money_Order</fullName>
    <active>true</active>
    <description>Compensation type is Money Order</description>
    <label>Money Order</label>
</RecordType>