force-app/main/default/objects/Compensation__c/recordTypes/Money_Order_Number_Required.recordType-meta.xml
<RecordType>
    <fullName>Money_Order_Number_Required</fullName>
    <active>true</active>
    <description>When a compensation is of type &apos;Money Order&apos; and needs the money order number</description>
    <label>Money Order Number Required</label>
</RecordType>