force-app/main/default/objects/Compensation__c/recordTypes/Replacement_Product.recordType-meta.xml
<RecordType>
    <fullName>Replacement_Product</fullName>
    <active>true</active>
    <description>Compensation type is Replacement Product</description>
    <label>Replacement Product</label>
</RecordType>