force-app/main/default/objects/Compensation__c/recordTypes/Retail_Compensation.recordType-meta.xml
<RecordType>
    <fullName>Retail_Compensation</fullName>
    <active>true</active>
    <description>This record type is for Retail Users that process compensation via MyNetwork</description>
    <label>Retail Compensation</label>
</RecordType>