force-app/main/default/objects/Compensation__c/validationRules/Change_Processing_EFT.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Processing_EFT</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(Status__c) ,ISPICKVAL( PRIORVALUE( Status__c ), &quot;Processing&quot;),
NOT(ISPICKVAL(Status__c, &quot;Processed Successfully&quot;) || ISPICKVAL(Status__c, &quot;EFT Rejected&quot;)))</errorConditionFormula>
    <errorMessage>Cannot Change a Processing EFT</errorMessage>
</ValidationRule>