force-app/main/default/objects/Compensation__c/validationRules/Check_Compensation_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Compensation_Value</fullName>
    <active>false</active>
    <description>Total value on the compensation has to be greater than 0</description>
    <errorConditionFormula>AND(OR($RecordType.DeveloperName = &apos;Money_Order&apos;,$RecordType.DeveloperName = &apos;Account_Credit&apos;),Floor( BLANKVALUE(Compensation_Amount__c, 0) +  BLANKVALUE(Service_Value__c,0)) &lt;=0)</errorConditionFormula>
    <errorMessage>Total money order value should be greater than 0 : (Value of contents + Postage/service value)</errorMessage>
</ValidationRule>