force-app/main/default/objects/Compensation__c/validationRules/Check_Contact_FIeld.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Contact_FIeld</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS($Profile.Name, &apos;SSSW&apos;),ISBLANK(Contact__c))</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>To create compensations the case must be attached to a customer</errorMessage>
</ValidationRule>