force-app/main/default/objects/Compensation__c/validationRules/Check_CostCentreCode.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_CostCentreCode</fullName>
    <active>true</active>
    <description>Check if the Cost Centre Code is part of custom setting &apos;RestrictedCostCentreCodes&apos;</description>
    <errorConditionFormula>AND(NOT(ISBLANK(CostCentreCode__c)), CONTAINS($Setup.QM__c.RestrictedCostCentreCodes__c,  CostCentreCode__c ))</errorConditionFormula>
    <errorMessage>Only enter a Cost Centre code if a facility has requested compensation to be charged to their work centre.</errorMessage>
</ValidationRule>