force-app/main/default/objects/Compensation__c/validationRules/Check_Cover_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Cover_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Compensation_Amount__c  &gt;100,ISPICKVAL(Cover_Type__c,&quot;T&amp;C Cover&quot;))</errorConditionFormula>
    <errorDisplayField>Cover_Type__c</errorDisplayField>
    <errorMessage>Compensation for contents over $100 is not covered by T&amp;Cs. Select the correct cover type.</errorMessage>
</ValidationRule>