force-app/main/default/objects/Compensation__c/validationRules/Check_EFT_Compensation_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_EFT_Compensation_Value</fullName>
    <active>true</active>
    <description>Compensation amount has to be equal to or greater than $0.01 and not more than $5000</description>
    <errorConditionFormula>AND(($RecordType.DeveloperName =&apos;EFT&apos; ||
$RecordType.DeveloperName =&apos;Account_Credit&apos;
),

(BLANKVALUE(Compensation_Amount__c,0) + BLANKVALUE(Service_Value__c,0) &lt;0.01) ||
(BLANKVALUE(Compensation_Amount__c,0) + BLANKVALUE(Service_Value__c,0) &gt;5000)
)</errorConditionFormula>
    <errorMessage>Compensation : the total value should be minimum 0.01 and maximum 5000.00</errorMessage>
</ValidationRule>