force-app/main/default/objects/Compensation__c/validationRules/Check_IntAcc_Compensation_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_IntAcc_Compensation_Value</fullName>
    <active>true</active>
    <description>International Accounting Compensation amount cannot be more than $2500</description>
    <errorConditionFormula>AND(($RecordType.DeveloperName =&apos;International_Accounting&apos;), BLANKVALUE(SDR_Value__c,0) &gt;2500
)</errorConditionFormula>
    <errorMessage>Compensation : the total SDR value should be a maximum of 2500.00</errorMessage>
</ValidationRule>