force-app/main/default/objects/Compensation__c/validationRules/SSSW_Service_Value_change.validationRule-meta.xml
<ValidationRule>
    <fullName>SSSW_Service_Value_change</fullName>
    <active>true</active>
    <description>Cannot change service value after approval</description>
    <errorConditionFormula>AND (ISCHANGED( Service_Value__c ), ISPICKVAL(Status__c, &apos;Approved&apos;))</errorConditionFormula>
    <errorMessage>The Service Value cannot be changed after Compensation has been approved</errorMessage>
</ValidationRule>